<resources>
    <string name="app_name">My Pocket operations</string>
    <string name="my_pocket">My Pocket</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="LSD">
        <item>Home</item>
        <item>In</item>
        <item>Out</item>
        <item>Persons</item>
        <item>Total</item>
        <item>Change password</item>
    </string-array>
    <string name="title_activity_view">view</string>
    <string name="title_activity_view_out">viewOut</string>
    <string name="title_activity_all_out">allOut</string>
    <string name="title_activity_all_in">allIn</string>
    <string name="inter_on_Add_UID">ca-app-pub-1848641763633479/9001552947</string>
    <string name="app_ID_ads">ca-app-pub-1848641763633479~9805791741</string>
    <string name="sum">Sum :</string>
    <string name="delete_all">Delete all</string>
    <string name="take_in">Take In</string>
    <string name="price">Price</string>
    <string name="_1234">1234..</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="notes">notes…</string>
    <string name="add">Add</string>
    <string name="i_have_in_my_pocket">I have in my pocket:\u0020</string>
    <string name="give_out">Give Out</string>
    <string name="to">To</string>
    <string name="give">Give</string>
    <string name="copy_right_modcru_co">Copy_right@modcru.co</string>
    <string name="delete">delete</string>
    <string name="have_in_my_pocket">I have in my pocket:\u0020</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Your Money !!?</string>
    <string name="slide_1_desc">Do you forget your outgoings and incomes?</string>

    <string name="slide_2_title">By simplest way</string>

    <string name="slide_3_desc">You can show and calculate how you had spent your money</string>

    <string name="slide_4_desc">You can show and calculate how you had get your money</string>

</resources>
